# CatchTraining

./: CMakeLists.txt  Common.cpp  Common.h  Logistic.cpp  Logistic.h  MachineLearning.cpp  Makefile  Multi.cpp  Multi.h  Single.cpp  Single.h  main.cpp  run.sh
